# swagger.yaml
@@ -14,7 +14,7 @@ paths:
     post:
       tags:
       - "People"
-      summary: "Create an people"
+      summary: "Create a Person"
       operationId: "post"
       consumes:
       - "application/json"
@@ -26,16 +26,12 @@ paths:
         required: true
         type: "integer"
         format: "int64"
-      - name: "x-auth"
-        in: "header"
-        required: false
-        type: "string"
       - in: "body"
         name: "body"
         description: "List of user object"
         required: true
         schema:
-          $ref: "#/definitions/Order"
+          $ref: "#/definitions/People"
       responses:
         "200":
           description: "people"
@@ -58,31 +54,7 @@ paths:
         required: true
         type: "integer"
         format: "int64"
-      - name: "filterHotel"
-        in: "query"
-        required: false
-        type: "string" 
-      - name: "filterUser"
-        in: "query"
-        required: false
-        type: "string"
-      - name: "fromDateCheckIn"
-        in: "query"
-        required: false
-        type: "string" 
-      - name: "toDateCheckIn"
-        in: "query"
-        required: false
-        type: "string"
-      - name: "fromDateCheckOut"
-        in: "query"
-        required: false
-        type: "string"
-      - name: "toDateCheckOut"
-        in: "query"
-        required: false
-        type: "string" 
-      - name: "people"
+      - name: "filter"
         in: "query"
         required: false
         type: "string" 
@@ -90,6 +62,16 @@ paths:
         in: "query"
         required: false
         type: "string" 
+      - name: "page"
+        in: "query"
+        required: false
+        type: "integer"
+        format: "int64"
+      - name: "pageSize"
+        in: "query"
+        required: false
+        type: "integer"
+        format: "int64"
       responses:
         "200":
           description: "people"
@@ -97,11 +79,11 @@ paths:
       - Client-key: []    
       
  
-  /api/v1.0/people/{id}:
-    get:
+  /api/v1.0/people/{id}/contacts:
+    post:
       tags:
-      - "People"
-      summary: "Get an people"
+      - "Contacts"
+      summary: "Create contact for a person"
       consumes:
       - "application/json"
       produces:
@@ -112,25 +94,30 @@ paths:
         required: true
         type: "integer"
         format: "int64"
-      - in: "path"
-        type: "string"
-        name: "id"
-        description: "id of people"
+      - name: "id"
+        in: "path"
         required: true
+        type: "string"
+      - in: "body"
+        name: "body"
+        description: "List of user object"
+        required: true
+        schema:
+          $ref: "#/definitions/Contacts"
       responses:
         "200":
           description: "people"
       security:
       - Client-key: []
-      - x-auth: []
 
-  
- 
-  /api/v1.0/hotels:
+
+  /api/v1.0/contacts:    
     get:
       tags:
-      - "Hotels / rooms"
-      summary: "Get all hotels and rooms"
+      - "Contacts"
+      summary: "Get contacts"
+      description: "Get contacts of people"
+      operationId: "get"
       consumes:
       - "application/json"
       produces:
@@ -141,134 +128,29 @@ paths:
         required: true
         type: "integer"
         format: "int64"
-      - in: "query"
-        type: "string"
-        name: "filter"
-        description: "filter for hotel name"
+      - name: "q"
+        in: "query"
         required: false
-      responses:
-        "200":
-          description: "hotels"
-      security:
-      - Client-key: []
-
-  /api/v1.0/make-payment/{credit_card}:
-    patch:
-      tags:
-      - "Payment"
-      summary: "Make payment"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "languageId"
-        in: "header"
-        required: true
-        type: "integer"
-        format: "int64"
-      - in: "query"
-        type: "string"
-        name: "id"
-        description: "id of the people (the payment_id is in the people object)"
+        type: "string" 
+      - name: "sort"
+        in: "query"
         required: false
-      - in: "path"
-        type: "string"
-        name: "credit_card"
-        description: "user's credit card"
-        required: true  
-      responses:
-        "200":
-          description: "Handled errors"
-      security:
-      - Client-key: []
-  
- 
-  /api/v1.0/payment-status/{id}:
-    get:
-      tags:
-      - "Payment"
-      summary: "Check the payment status of an people"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "languageId"
-        in: "header"
-        required: true
+        type: "string" 
+      - name: "page"
+        in: "query"
+        required: false
         type: "integer"
         format: "int64"
-      - in: "path"
-        type: "string"
-        name: "id"
-        description: "id of people"
-        required: true
-      responses:
-        "200":
-          description: "payments"
-      security:
-      - Client-key: []
-      - x-auth: []
-
-
-  /api/v1.0/user/signin:
-    post:
-      tags:
-      - "User"
-      summary: "User sign in"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "languageId"
-        in: "header"
-        required: true
+      - name: "pageSize"
+        in: "query"
+        required: false
         type: "integer"
         format: "int64"
-      - in: "body"
-        name: "body"
-        description: "user login details"
-        required: true
-        schema:
-          $ref: "#/definitions/User SIgnIn"
       responses:
         "200":
-          description: "user object"
+          description: "people"
       security:
-      - Client-key: []
-      - x-auth: []
-
-
-  /api/v1.0/user/signup:
-    post:
-      tags:
-      - "User"
-      summary: "User sign up"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "languageId"
-        in: "header"
-        required: true
-        type: "integer"
-        format: "int64"
-      - in: "body"
-        name: "body"
-        description: "user login details"
-        required: true
-        schema:
-          $ref: "#/definitions/User SignUp"
-      responses:
-        "200":
-          description: "user object"
-      security:
-      - Client-key: []
-      - x-auth: []
-  
+      - Client-key: [] 
 
 securityDefinitions:
   Client-key:
@@ -276,113 +158,30 @@ securityDefinitions:
     name: "Client-key"
     in: "header"
 definitions:
-  Order:
+  People:
     type: "object"
     properties:
-      hotel_id:
-        type: "string"
-      room_id:
-        type: "string"
-      number_of_guests:
-        type: "integer"
-        format: "int32"
       name:
         type: "string"
-      email:
+        example: "Tony Stark"
+      age:
+        type: "integer"
+        format: "int32"
+        example: 29 
+      height:
         type: "string"
-      phone:
-        type: "string"
-      payment_id:
-        type: "string"  
-      check_in_date:
-        type: "string"
-        format: "date-time"
-        example: "2020-10-23"
-      check_out_date:
-        type: "string"
-        format: "date-time"
-        example: "2020-12-29"  
+        example: "155"  
     xml:
-      name: "Order"
+      name: "People"
 
-  User SIgnIn:
+  Contacts:
     type: "object"
     properties:
-      email_phone:
+      email:
         type: "string"
-      password:
+      number:
         type: "string" 
     xml:
-      name: "User" 
+      name: "Contacts" 
       
-      
-  User SignUp:
-    type: "object"
-    properties:
-      email:
-        type: "string"
-      phone:
-        type: "string"
-      password:
-        type: "string"
-      username:
-        type: "string"      
-    xml:
-      name: "User" 
-
-  Hotel:
-    type: "object"
-    properties:
-      hotel_name:
-        type: "string"
-      number_of_rooms:
-        type: "string"
-      stars:
-        type: "integer"
-        format: "int32"
-      address:
-        type: "string"      
-    xml:
-      name: "Hotel" 
-
-  Room:
-    type: "object"
-    properties:
-      room_name:
-        type: "string"
-      hotel_id:
-        type: "string"
-      room_capacity:
-        type: "integer"
-        format: "int32"
-      address:
-        type: "string"
-      price:
-        type: "integer"
-        format: "int32"
-    xml:
-      name: "Room" 
-
-  Payment:
-    type: "object"
-    properties:
-      status:
-        type: "string"
-      method:
-        type: "string"
-      total_amount:
-        type: "integer"
-        format: "int32"
-      description:
-        type: "string"
-      credit_card:
-        type: "string"
-      payment_date:
-        type: "string"
-      price:
-        type: "integer"
-        format: "int32"
-    xml:
-      name: "Room" 
-
- 
+    
